--- a/frontFiles/kitchen.html
+++ b/frontFiles/kitchen.html
@@ -188,7 +188,9 @@
       <div class="row">
         <div class="col-9 m-auto text-center">
           <p class="copy"></p>
+          
         </div>
+        
       </div>
     </div>
   </section>
@@ -198,7 +200,7 @@
     async>
   </script>
 
-  <script src="./map.js"></script>
+  <script src="./main.js"></script>
   <script src="./script.js"></script>
   <script src="https://kit.fontawesome.com/e3325bedec.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
