--- a/frontFiles/about.html
+++ b/frontFiles/about.html
@@ -148,7 +148,9 @@
       <div class="row">
         <div class="col-9 m-auto text-center">
           <p class="copy"></p>
+          
         </div>
+        
       </div>
     </div>
   </section>
@@ -157,8 +159,9 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChvYKD6szQ9sWJ7IKqxhDKXvMu-RsMP6I&callback=initMap&libraries=&v=weekly"
     async></script>
 
-  <script src="./map.js"></script>
+  <script src="./main.js"></script>
   <script src="./script.js"></script>
+ 
   <script src="https://kit.fontawesome.com/e3325bedec.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
