--- a/frontFiles/bar.html
+++ b/frontFiles/bar.html
@@ -170,7 +170,9 @@
       <div class="row">
         <div class="col-9 m-auto text-center">
           <p class="copy"></p>
+          
         </div>
+        
       </div>
     </div>
   </section>
@@ -179,7 +181,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChvYKD6szQ9sWJ7IKqxhDKXvMu-RsMP6I&callback=initMap&libraries=&v=weekly"
     async>
   </script>
-  <script src="./map.js"></script>
+  <script src="./main.js"></script>
   <script src="./script.js"></script>
   <script src="https://kit.fontawesome.com/e3325bedec.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
